# wami

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml  rustdoc
cli/: Cargo.toml
cli/src/: main.rs
example/hello/: Cargo.toml  Makefile  hello.wasm  hello.wat
example/hello/src/: main.rs
lib/wami_macro/: Cargo.toml
lib/wami_macro/src/: lib.rs
misc/: bytecode.csv  opcode.csv
sample/cli/: Cargo.toml
sample/hello/: hello.wasm  hello.wat
sample/hello/src/: main.rs
src/: intcode.rs  leb128.rs  lib.rs  main.rs  memory.rs  opcode.rs  stack.rs  tests.rs  wasm.rs  wasmintr.rs  wasmrt.rs
src/_generated/: bytecode.rs  opcode.rs
src/cg/: intcode.rs  intr.rs  mod.rs
src/cg/traditional/: intcode.rs  intr.rs  mod.rs
src/opcode/: opcode_fc.rs  opcode_fd.rs  single.rs
src/sync/: mod.rs  rwlock_nb.rs
test/: Makefile  fib.wasm  fib.wat  global.wasm  global.wat  opr.wasm  opr.wat  tester.wasm  tester.wat
