[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "wami"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# all = ["float"]
# float = []

[dependencies]
bitflags = "1.2"
num-traits = "0.2.17"
smallvec = "1.10.0"
