[package]
authors = ["Nerry <108566+neri@users.noreply.github.com>"]
edition = "2021"
name = "wami"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# all = ["float"]
# float = []

[dependencies]
wami_macro = {path="./lib/wami_macro"}
bitflags = {version = "2.4.2", default-features = false}
libm = {version="0.2.8"}
num-traits = {version = "0.2.18", default-features = false}
smallvec = {version = "1.13.1", default-features = false}

[workspace]
members = [
  "cli",
]
